added get producer list
